; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_dandarpc.c_DANDARPC_REQUEST_to_xml_element.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_dandarpc.c_DANDARPC_REQUEST_to_xml_element.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32, i8*, i32, i8*, i8* }

@ATTR_VERSION = common dso_local global i8* null, align 8
@VAL_VERSION_0_9 = common dso_local global i8* null, align 8
@xmlrpc_request_response = common dso_local global i64 0, align 8
@ELEM_METHODRESPONSE = common dso_local global i8* null, align 8
@xmlrpc_request_call = common dso_local global i64 0, align 8
@ELEM_METHODCALL = common dso_local global i8* null, align 8
@ELEM_ROOT = common dso_local global i8* null, align 8
@ELEM_METHODNAME = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @DANDARPC_REQUEST_to_xml_element(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  store i64 %0, i64* %2, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %4, align 8
  %9 = load i64, i64* %2, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %84

11:                                               ; preds = %1
  %12 = load i64, i64* %2, align 8
  %13 = call i64 @XMLRPC_RequestGetRequestType(i64 %12)
  store i64 %13, i64* %5, align 8
  store i8* null, i8** %6, align 8
  %14 = call %struct.TYPE_8__* @emalloc(i32 40)
  store %struct.TYPE_8__* %14, %struct.TYPE_8__** %7, align 8
  %15 = load i8*, i8** @ATTR_VERSION, align 8
  %16 = call i8* @estrdup(i8* %15)
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 5
  store i8* %16, i8** %18, align 8
  %19 = load i8*, i8** @VAL_VERSION_0_9, align 8
  %20 = call i8* @estrdup(i8* %19)
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 4
  store i8* %20, i8** %22, align 8
  %23 = call %struct.TYPE_8__* (...) @xml_elem_new()
  store %struct.TYPE_8__* %23, %struct.TYPE_8__** %3, align 8
  %24 = load i64, i64* %5, align 8
  %25 = load i64, i64* @xmlrpc_request_response, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %11
  %28 = load i8*, i8** @ELEM_METHODRESPONSE, align 8
  store i8* %28, i8** %6, align 8
  br label %36

29:                                               ; preds = %11
  %30 = load i64, i64* %5, align 8
  %31 = load i64, i64* @xmlrpc_request_call, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %29
  %34 = load i8*, i8** @ELEM_METHODCALL, align 8
  store i8* %34, i8** %6, align 8
  br label %35

35:                                               ; preds = %33, %29
  br label %36

36:                                               ; preds = %35, %27
  %37 = load i8*, i8** %6, align 8
  %38 = icmp ne i8* %37, null
  br i1 %38, label %39, label %44

39:                                               ; preds = %36
  %40 = load i8*, i8** %6, align 8
  %41 = call i8* @estrdup(i8* %40)
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 2
  store i8* %41, i8** %43, align 8
  br label %44

44:                                               ; preds = %39, %36
  %45 = call %struct.TYPE_8__* (...) @xml_elem_new()
  store %struct.TYPE_8__* %45, %struct.TYPE_8__** %4, align 8
  %46 = load i8*, i8** @ELEM_ROOT, align 8
  %47 = call i8* @estrdup(i8* %46)
  %48 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %48, i32 0, i32 2
  store i8* %47, i8** %49, align 8
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %50, i32 0, i32 3
  %52 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %53 = call i32 @Q_PushTail(i32* %51, %struct.TYPE_8__* %52)
  %54 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %55 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %54, i32 0, i32 0
  %56 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %57 = call i32 @Q_PushTail(i32* %55, %struct.TYPE_8__* %56)
  %58 = load i64, i64* %2, align 8
  %59 = call i8* @XMLRPC_RequestGetMethodName(i64 %58)
  store i8* %59, i8** %6, align 8
  %60 = load i8*, i8** %6, align 8
  %61 = icmp ne i8* %60, null
  br i1 %61, label %62, label %76

62:                                               ; preds = %44
  %63 = call %struct.TYPE_8__* (...) @xml_elem_new()
  store %struct.TYPE_8__* %63, %struct.TYPE_8__** %8, align 8
  %64 = load i8*, i8** @ELEM_METHODNAME, align 8
  %65 = call i8* @estrdup(i8* %64)
  %66 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %67 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %66, i32 0, i32 2
  store i8* %65, i8** %67, align 8
  %68 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %69 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %68, i32 0, i32 1
  %70 = load i8*, i8** %6, align 8
  %71 = call i32 @simplestring_add(i32* %69, i8* %70)
  %72 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %73 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %72, i32 0, i32 0
  %74 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %75 = call i32 @Q_PushTail(i32* %73, %struct.TYPE_8__* %74)
  br label %76

76:                                               ; preds = %62, %44
  %77 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %78 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %77, i32 0, i32 0
  %79 = load i64, i64* %2, align 8
  %80 = load i64, i64* %2, align 8
  %81 = call i32 @XMLRPC_RequestGetData(i64 %80)
  %82 = call %struct.TYPE_8__* @DANDARPC_to_xml_element_worker(i64 %79, i32 %81)
  %83 = call i32 @Q_PushTail(i32* %78, %struct.TYPE_8__* %82)
  br label %84

84:                                               ; preds = %76, %1
  %85 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  ret %struct.TYPE_8__* %85
}

declare dso_local i64 @XMLRPC_RequestGetRequestType(i64) #1

declare dso_local %struct.TYPE_8__* @emalloc(i32) #1

declare dso_local i8* @estrdup(i8*) #1

declare dso_local %struct.TYPE_8__* @xml_elem_new(...) #1

declare dso_local i32 @Q_PushTail(i32*, %struct.TYPE_8__*) #1

declare dso_local i8* @XMLRPC_RequestGetMethodName(i64) #1

declare dso_local i32 @simplestring_add(i32*, i8*) #1

declare dso_local %struct.TYPE_8__* @DANDARPC_to_xml_element_worker(i64, i32) #1

declare dso_local i32 @XMLRPC_RequestGetData(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
